--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <b>Hello Everyone</b>
 
     <p style="color:yellow">Honesty begins where ego ends</p>
+    <p>practice make a men perfect</p>
 
 </body>
