--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+</head>
 <body>
+    <body>
 
-    <b>Hello Everyone</b>
-
-    <p style="color:yellow">Honesty begins where ego ends</p>
-    <p>practice make a men perfect</p>
-
+        <b>Hello Everyone</b>
+    
+        <p style="color:yellow">Honesty begins where ego ends</p>
+        <p>practice make a men perfect</p>
+    
+    </body>
 </body>
+</html>
